--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
     <section id="skills">
       <h2>Skills und Kenntnisse</h2>
-      <p>Dieser Bereich ist für Recrutys gedacht.<br>Die Einschätzungen sind natürlich subjektiv.<br> Für ein paar davon
+      <p>Dieser Bereich ist für Recrutys gedacht. Die Einschätzungen sind natürlich subjektiv, aber für ein viele davon
         gibt es aber Belege im <a href="#cv">Lebenslauf</a></p>
       <form id="skillform">
         <button type="button" id="toJSON">to JSON</button>
